# Redumper-GUI

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
assets/icon/: icon.icns
src/: app.rs  drives.rs  dump.rs  main.rs  postprocess.rs  theme.rs
src/app/: display.rs  fonts.rs  logic.rs  panels.rs  toolbar.rs
